--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "global task in epam lab",
   "main": "categories-grid.html",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "scss": "node-sass -w styles -o artifacts"
-},
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "scss": "node-sass -w styles -o artifacts"
+  },
   "repository": {
     "type": "git",
     "url": "git@git.epam.com:Aleksei_Chernitsyn/global-task.git"
@@ -15,5 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "node-sass": "^4.9.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.24.6",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-sass": "^4.0.1",
+    "gulp-watch": "^5.0.1",
+    "gulp-watcher": "^1.0.1"
   }
 }
