--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "devDependencies": {
     "browser-sync": "^2.24.6",
+    "browserify": "^16.2.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlclean": "^2.7.22",
     "gulp-sass": "^4.0.1",
     "gulp-watch": "^5.0.1",
-    "gulp-watcher": "^1.0.1"
+    "gulp-watcher": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
