--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlclean": "^2.7.22",
+    "gulp-minify": "^3.1.0",
     "gulp-sass": "^4.0.1",
     "gulp-watch": "^5.0.1",
     "gulp-watcher": "^1.0.1",
