--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "global-task",
   "version": "1.0.0",
   "description": "global task in epam lab",
-  "main": "categories-grid.html",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "scss": "node-sass -w styles -o artifacts",
@@ -15,27 +15,22 @@
   },
   "author": "Aleksei Chernitsyn",
   "license": "ISC",
-  "dependencies": {
-    "node-sass": "^4.9.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "browser-sync": "^2.24.6",
-    "browserify": "^16.2.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-htmlclean": "^2.7.22",
-    "gulp-minify": "^3.1.0",
-    "gulp-sass": "^4.0.1",
-    "gulp-watch": "^5.0.1",
-    "gulp-watcher": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.1",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
+    "lodash.template": "^4.4.0",
+    "mini-css-extract-plugin": "^0.4.2",
+    "node-sass": "^4.9.3",
+    "path": "^0.12.7",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.22.1",
+    "url-loader": "^1.1.1",
     "webpack": "^4.17.0",
     "webpack-cli": "^3.1.0"
   }
