--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "global-task",
   "version": "1.0.0",
   "description": "global task in epam lab",
-  "main": "index.html",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "scss": "node-sass -w styles -o artifacts",
-    "build": "webpack",
-    "start": "webpack --watch"
+    "start": "webpack-dev-server",
+    "build": "cross-env NODE_ENV='production' webpack -p"
   },
   "repository": {
     "type": "git",
@@ -15,15 +15,18 @@
   },
   "author": "Aleksei Chernitsyn",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "4.17.10",
+    "jquery": "3.3.1"
+  },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.3.1",
-    "lodash": "^4.17.10",
     "lodash.template": "^4.4.0",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
@@ -32,6 +35,8 @@
     "style-loader": "^0.22.1",
     "url-loader": "^1.1.1",
     "webpack": "^4.17.0",
-    "webpack-cli": "^3.1.0"
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   }
 }
