--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "author": "Aleksei Chernitsyn",
   "license": "ISC",
   "dependencies": {
-    "lodash": "4.17.10",
-    "jquery": "3.3.1"
+    "history": "^4.7.2",
+    "jquery": "3.3.1",
+    "lodash": "4.17.10"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
