--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-sass": "^4.9.3",
     "path": "^0.12.7",
     "sass-loader": "^7.1.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.22.1",
     "url-loader": "^1.1.1",
     "webpack": "^4.17.0",
