--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "history": "^4.7.2",
     "jquery": "3.3.1",
+    "local-storage": "^1.4.2",
     "lodash": "4.17.10"
   },
   "devDependencies": {
