finished migration on ES6

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "lodash": "4.17.10"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
